<resources>
    <string name="app_name">Fint</string>
    <string name="main">Главная</string>
    <string name="analytics">Аналитика</string>
    <string name="history">История</string>
    <string name="plan">План</string>
    <string name="profile">Настройки</string>
    <string name="category1">Категория 1</string>
    <string name="cash">Наличные</string>
    <string name="debt">Дебетовые карты</string>
    <string name="cred_cards">Кредитные карты</string>
    <string name="bank_acc">Банковские счета</string>
    <string name="exc_rates">Валютные счета</string>
    <string name="acc">Счет</string>
    <string name="data">Дата</string>
    <string name="category">Категория</string>
    <string name="sum">Сумма</string>
    <string name="Commentary">  Комментарий</string>
    <string name="incomeadd">Добавить доход</string>
    <string name="outcomeadd">Добавить расход</string>
    <string name="transfer">Перевод между счетами</string>
    <string name="loans">Займы</string>
    <string name="settings">Настройки</string>
    <string name="language">Язык</string>
    <string name="password">Пароль</string>
    <string name="сurrency">Валюта по умолчанию</string>
    <string name="account">Счет</string>
    <string name="сattegory">Категории</string>/>


    <string-array name="category">
        <item>Наличные</item>
        <item>Дебетовые карты</item>
        <item>Кредитные карты</item>
        <item>Банковские счета</item>
        <item>Валютные счета</item>
    </string-array>

    <string-array name="cash_acc">
        <item>Кошелек</item>
        <item>Сертификаты</item>
        <item>Заначка</item>
    </string-array>

    <string-array name="cash_acc_sum">
        <item>2 566 ₽</item>
        <item>3 000 ₽</item>
        <item>300 000 ₽</item>
    </string-array>

    <string-array name="debt_acc">
        <item>Сбербанк</item>
        <item>Тинькофф</item>
    </string-array>

    <string-array name="debt_acc_sum">
        <item>25 456 ₽</item>
        <item>18 769 ₽</item>
    </string-array>

    <string-array name="cred_acc">
        <item>Альфа</item>
        <item>Тинькофф</item>
    </string-array>

    <string-array name="cred_acc_sum">
        <item>100 000 ₽ </item>
        <item>150 000 ₽ </item>
    </string-array>

    <string-array name="cred_lim">
        <item>лимит: 110 000 ₽</item>
        <item>лимит: 150 000 ₽</item>
    </string-array>

    <string-array name="bank_acc">
        <item>Открытие Брокер</item>
        <item>Райф НС</item>
    </string-array>

    <string-array name="bank_acc_sum">
        <item>1 256 456 ₽</item>
        <item>2 644 897 ₽</item>
    </string-array>

    <string-array name="cur_acc">
        <item>Газпромбанк Евро</item>
        <item>Газпромбанк Доллар</item>
    </string-array>

    <string-array name="cur_sum">
        <item>1 200 €</item>
        <item>2 800 $</item>
    </string-array>

    <string-array name="cur_exc">
        <item>курс: 89,65 ₽</item>
        <item>курс: 75,36 ₽</item>
    </string-array>

    <string-array name="value">
        <item>Рубли</item>
        <item>Доллары</item>
        <item>Евро</item>
    </string-array>

    <string-array name="language">
        <item>Русский</item>
        <item>Английский</item>
    </string-array>

    <string-array name="сurrency">
        <item>Рубль</item>
        <item>Евро</item>
        <item>Доллар</item>
    </string-array>

    <string-array name="password">
        <item>Установить пароль</item>
        <item>Сбросить пароль</item>
    </string-array>

    <string-array name="cattegory">
        <item>Питание</item>
        <item> Транспорт</item>
        <item>Хозяйство</item>
        <item>Развлечения</item>
        <item>Путешествия</item>
        <item>Здоровье</item>
        <item>Спорт</item>
        <item>Образование</item>
        <item>Внешний вид</item>
        <item>Связь</item>
        <item>Автомобиль</item>
        <item>Хобби</item>
        <item>Благотворительность</item>
        <item>Прочие расходы</item>
        <item>Зарплата</item>
        <item>Стипендия</item>
        <item>Оказание услуг</item>
        <item>Прочие доходы</item>
    </string-array>

    <string-array name="profile">
        <item>Профиль 1</item>
        <item>Профиль 2</item>

    </string-array>
    <string-array name="account">
        <item>Тинькофф</item>
        <item>ВТБ</item>
        <item>Сбер</item>

    </string-array>








</resources>