<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_main"
        android:title="@string/main"
        android:icon="@drawable/ic_main"
        android:iconTint="@color/colorText"
    />

    <item
        android:id="@+id/action_history"
        android:title="@string/history"
        android:icon="@drawable/ic_history"
        android:iconTint="@color/colorText"

        />

    <item

        android:checked="false"
        android:enabled="false"
        android:title=" " />

    <item
        android:id="@+id/action_analytics"
        android:title="@string/analytics"
        android:icon="@drawable/ic_analytics"
        android:checkable="false"
        android:enabled="false"
        />

    <item
        android:id="@+id/action_profile"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        android:iconTint="@color/colorText"
        />

</menu>